Add options for lein to allow codox generation on jdk 16+